Move user menu back into the work area if it extends too far down.

Also shifts the user menu right in this case so that the dropdown arrow
remains visible.

Bug: 861791
Change-Id: I65b0be969c1f15936ce3b86df5bae4eb7c200ed6
Reviewed-on: https://chromium-review.googlesource.com/1129847
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573482}
Former-commit-id: 1112e023de45107107f178257a5193e0bfa4e92f